Fixed a bunch of issues with bookmarks buttons on Firefox 55.

--- a/FirefoxEdgeLight.css
+++ b/FirefoxEdgeLight.css
@@ -892,16 +892,16 @@
 
   /* BOOKMARKS BUTTON */
   :-moz-any(#nav-bar, #mainPopupSet, #PersonalToolbar, #TabsToolbar) #bookmarks-menu-button {
-    list-style-image: var(--bookmarks-menu-button-image);
+    list-style-image: var(--bookmarks-menu-button-image) !important;
   }
 
   :-moz-any(#nav-bar, #mainPopupSet, #PersonalToolbar, #TabsToolbar) #bookmarks-menu-button > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon,
   :-moz-any(#nav-bar, #mainPopupSet, #PersonalToolbar, #TabsToolbar)[brighttext] #bookmarks-menu-button > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
-    list-style-image: var(--bookmarks-menu-button-dropmarker-image);
+    list-style-image: var(--bookmarks-menu-button-dropmarker-image) !important;
   }
 
   #nav-bar #bookmarks-menu-button[cui-areatype="toolbar"] > .toolbarbutton-menubutton-button > .toolbarbutton-icon {
-    max-width: 33px;
+    max-width: 34px;
   }
 
   #nav-bar #bookmarks-menu-button[cui-areatype="toolbar"] > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
@@ -948,6 +948,24 @@
   #bookmarked-notification-anchor[notification="finish"] > #bookmarked-notification {
     background-image: var(--bookmarked-notification-image);
   }
+                 
+  #bookmarked-notification-dropmarker-anchor[notification="finish"] > #bookmarked-notification-dropmarker-icon {
+    visibility: hidden;
+    animation: none;
+  }
+                 
+  #bookmarks-menu-button[notification="finish"] > .toolbarbutton-menubutton-dropmarker {
+    animation: animation-bookmarkPulse 300ms;
+    animation-delay: 600ms;
+    animation-timing-function: ease-out;
+  }
+                 
+  @keyframes animation-bookmarkAdded {
+    from { transform: rotate(0deg) translateX(-19px) rotate(0deg) scale(1); opacity: 0; }
+    60%  { transform: rotate(180deg) translateX(-19px) rotate(-180deg) scale(2.2); opacity: 1; }
+    80%  { opacity: 1; }
+    to   { transform: rotate(180deg) translateX(-19px) rotate(-180deg) scale(1); opacity: 0; }
+  }
 
   #nav-bar .badged-button:hover {
     background-color: var(--top-level-bg-hover-color) !important;
@@ -957,8 +975,7 @@
     background-color: var(--top-level-bg-active-color) !important;
   }
 
-  /* DOWNLOADS BUTTON */
-  
+  /* DOWNLOADS BUTTON */  
   #downloads-button[cui-areatype="toolbar"] .toolbarbutton-icon {
     width: 20px !important;
     height: 20px !important;
@@ -1118,6 +1135,8 @@
     background-image: var(--default-dropdown-image);
     background-position: right 4px top 22px;
   }
+                 
+
   
   /* TOOLBAR BUTTON BADGE */
   .toolbarbutton-badge {
